# dbt-model-generator

./: .gitignore  README.md  app.py  changes.txt  config.py  main.py  pyproject.toml
res/: customers_updated.sql  orders_cleaned.sql
samples_csv_map/: sample_transformation.csv  sample_transformation2.csv
