[project]
name = "dbt-model-generator"
version = "0.1.0"
description = "A Streamlit app to generate DBT models from mapping documents using LLM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "groq>=1.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "streamlit>=1.53.1",
]
